Regression: A lot of spam in terminal about wrong time #116137

Closed
opened 2023-12-13 12:32:54 +01:00 by Iliya Katushenock · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit hash: fb8bf8b0c8
Worked: (newest version of Blender that worked as expected)

Caused by: Probably #115872.

Short description of error

GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 3214, current time is 3215, for type 1
GHOST: suspicious time-stamp from far in the past: 0.06 seconds, absolute value is 3491, current time is 3555, for type 1
GHOST: suspicious time-stamp from far in the past: 0.09 seconds, absolute value is 3833, current time is 3921, for type 1
GHOST: suspicious time-stamp from far in the past: 0.10 seconds, absolute value is 3848, current time is 3950, for type 2
GHOST: suspicious time-stamp from far in the past: 0.28 seconds, absolute value is 3928, current time is 4210, for type 3
GHOST: suspicious time-stamp from far in the past: 0.12 seconds, absolute value is 4085, current time is 4210, for type 1
GHOST: suspicious time-stamp from far in the past: 0.08 seconds, absolute value is 4132, current time is 4213, for type 2
GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4224, current time is 4240, for type 1
GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4224, current time is 4240, for type 3
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4262, current time is 4262, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4576, current time is 4576, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4577, current time is 4577, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4580, current time is 4580, for type 1
GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4566, current time is 4582, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4584, current time is 4584, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4594, current time is 4594, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4594, current time is 4594, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4597, current time is 4597, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4608, current time is 4608, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4611, current time is 4611, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4611, current time is 4611, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4613, current time is 4613, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4615, current time is 4615, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4622, current time is 4622, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4639, current time is 4639, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4639, current time is 4639, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4656, current time is 4656, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4672, current time is 4672, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4673, current time is 4673, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4719, current time is 4719, for type 1
GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4734, current time is 4735, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4752, current time is 4752, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4752, current time is 4752, for type 1
GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4739, current time is 4755, for type 1
GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4767, current time is 4768, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4768, current time is 4768, for type 1
GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4783, current time is 4784, for type 1
GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4798, current time is 4799, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4814, current time is 4814, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4815, current time is 4815, for type 1
GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 5017, current time is 5017, for type 1

Exact steps for others to reproduce the error

  1. Press Report a Bug.
  2. Check the terminal.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit hash: fb8bf8b0c892e3eb5ca920420f6d7e5fb1c5bfd7 Worked: (newest version of Blender that worked as expected) Caused by: Probably #115872. **Short description of error** ``` GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 3214, current time is 3215, for type 1 GHOST: suspicious time-stamp from far in the past: 0.06 seconds, absolute value is 3491, current time is 3555, for type 1 GHOST: suspicious time-stamp from far in the past: 0.09 seconds, absolute value is 3833, current time is 3921, for type 1 GHOST: suspicious time-stamp from far in the past: 0.10 seconds, absolute value is 3848, current time is 3950, for type 2 GHOST: suspicious time-stamp from far in the past: 0.28 seconds, absolute value is 3928, current time is 4210, for type 3 GHOST: suspicious time-stamp from far in the past: 0.12 seconds, absolute value is 4085, current time is 4210, for type 1 GHOST: suspicious time-stamp from far in the past: 0.08 seconds, absolute value is 4132, current time is 4213, for type 2 GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4224, current time is 4240, for type 1 GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4224, current time is 4240, for type 3 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4262, current time is 4262, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4576, current time is 4576, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4577, current time is 4577, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4580, current time is 4580, for type 1 GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4566, current time is 4582, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4584, current time is 4584, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4594, current time is 4594, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4594, current time is 4594, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4597, current time is 4597, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4608, current time is 4608, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4611, current time is 4611, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4611, current time is 4611, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4613, current time is 4613, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4615, current time is 4615, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4622, current time is 4622, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4639, current time is 4639, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4639, current time is 4639, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4656, current time is 4656, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4672, current time is 4672, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4673, current time is 4673, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4719, current time is 4719, for type 1 GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4734, current time is 4735, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4752, current time is 4752, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4752, current time is 4752, for type 1 GHOST: suspicious time-stamp from far in the past: 0.02 seconds, absolute value is 4739, current time is 4755, for type 1 GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4767, current time is 4768, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4768, current time is 4768, for type 1 GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4783, current time is 4784, for type 1 GHOST: suspicious time-stamp from far in the past: 0.00 seconds, absolute value is 4798, current time is 4799, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4814, current time is 4814, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4815, current time is 4815, for type 1 GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 5017, current time is 5017, for type 1 ``` **Exact steps for others to reproduce the error** 1. Press `Report a Bug`. 2. Check the terminal.
Author
Member
@Harley / @LazyDodo
Member

Can also confirm on Linux.

Can also confirm on Linux.
Member

Ah, I saw those console messages too and assumed that Campbell had added something new for testing.

A lot of these look pretty bogus, like

GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4597, current time is 4597, for type 1
Ah, I saw those console messages too and assumed that Campbell had added something new for testing. A lot of these look pretty bogus, like ``` GHOST: suspicious time-stamp from far in the future: 0.00 seconds, absolute value is 4597, current time is 4597, for type 1 ```
Harley Acheson self-assigned this 2023-12-13 18:24:58 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-13 22:46:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116137
No description provided.